# ruest-client

./: Cargo.toml  README.md
.github/workflows/: style.yml  test.yml
src/: @  app.rs  component.rs  http.rs  keys.rs  main.rs  pane.rs  ui.rs  util.rs
src/component/: input_box.rs  input_line.rs
src/ui/: collection_list.rs  methods_list.rs  requests_list.rs  right.rs  theme.rs  ui.rs
src/ui/right/: request.rs  response.rs
