[package]
name = "ruest-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.24", features = [ "serde" ]}
serde = { version = "1.0"}
serde_json = "1.0"
tui = { version = "0.18", features = ['crossterm', 'serde']}
reqwest = { version = "0.11"}
tokio = { version = "1", features = ["full"] }
