[package]
name = "ruest-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.24", features = [ "serde" ] }
edit = { version =  "0.1.4" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
tempfile = { version = "3.0" }
tui = { version = "0.18", features = ['crossterm', 'serde'] }
reqwest = { version = "0.11" }
