[package]
name = "ruest-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.25", features = [ "serde" ]}
serde = { version = "1.0"}
serde_json = "1.0"
tui = { version = "0.19.0", features=[ "crossterm", "serde" ]}
tui-textarea = { version = "0.2.0" }
reqwest = { version = "0.11"}
tokio = { version = "1", features = ["full"] }
mockito = "0.31.0"
cli-clipboard = { version = "0.4.0"}
